--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
         "negotiator": "0.6.1"
       }
     },
+      "engines": {
+    "node": "8.12.0"
+  }
     "array-flatten": {
       "version": "1.1.1",
       "resolved": "https://registry.npmjs.org/array-flatten/-/array-flatten-1.1.1.tgz",
