--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "engines": {
     "node": "8.12.0"
   },
+  
   "dependencies": {
     "accepts": {
       "version": "1.3.5",
@@ -17,6 +18,9 @@
         "negotiator": "0.6.1"
       }
     },
+    "express":"*",
+   "body-parser":"*",
+   "bcrypt": "^0.8.5", 
       "engines": {
     "node": "8.12.0"
   },
